[package]
name = "testssl-bin"
version.workspace = true
edition.workspace = true

[[bin]]
name = "testssl"
path = "src/main.rs"

[dependencies]
testssl-core = { path = "../testssl-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
