[package]
name = "testssl-node"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
testssl-core = { path = "../testssl-core" }
napi = { version = "2", features = ["napi4", "tokio_rt"] }
napi-derive = "2"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
anyhow = "1"

[build-dependencies]
napi-build = "2"
